--- a/smiletray.csproj
+++ b/smiletray.csproj
@@ -84,11 +84,6 @@
                     AssemblyName = "System.Windows.Forms"
                     HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Windows.Forms.dll"
                 />
-                <Reference
-                    Name = "System.XML"
-                    AssemblyName = "System.XML"
-                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
-                />
             </References>
         </Build>
         <Files>
@@ -99,10 +94,11 @@
                 />
                 <File
                     RelPath = "AssemblyInfo.cs"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "comlogParser.cs"
+                    RelPath = "CConsoleParser.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
@@ -118,6 +114,11 @@
                 />
                 <File
                     RelPath = "ScreenCapture.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "TypeDef.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
