--- a/smiletray.csproj
+++ b/smiletray.csproj
@@ -109,7 +109,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "giffile.cs"
+                    RelPath = "GIFFile.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
