--- a/smiletray.csproj
+++ b/smiletray.csproj
@@ -24,7 +24,7 @@
             >
                 <Config
                     Name = "Debug"
-                    AllowUnsafeBlocks = "false"
+                    AllowUnsafeBlocks = "true"
                     BaseAddress = "285212672"
                     CheckForOverflowUnderflow = "false"
                     ConfigurationOverrideFile = ""
@@ -129,7 +129,22 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "OctreeQuantizer.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "PaletteQuantizer.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Profiles.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Quantizer.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
