--- a/smiletray/smiletray.csproj
+++ b/smiletray/smiletray.csproj
@@ -135,7 +135,7 @@
     <Compile Include="ViewStats.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="XML.cs">
+    <Compile Include="Xml.cs">
       <SubType>Code</SubType>
     </Compile>
     <EmbeddedResource Include="Exception.resx">
@@ -158,7 +158,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
