--- a/smile-hook/smile-hook.vcproj
+++ b/smile-hook/smile-hook.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="smile-hook"
 	ProjectGUID="{EE0A002A-DC6C-4B55-B401-EA252A85BDB7}"
+	RootNamespace="smile-hook"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -20,7 +21,7 @@
 			IntermediateDirectory="Debug"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -40,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SMILEHOOK_EXPORTS"
+				PreprocessorDefinitions="HOOK_EXPORTS; _USRDLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -60,8 +61,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/smile-hook.dll"
+				AdditionalDependencies="shlwapi.lib d3dx9.lib"
+				OutputFile="$(SolutionDir)/Debug/smile-hook.dll"
 				LinkIncremental="2"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/smile-hook.pdb"
 				SubSystem="2"
@@ -118,7 +121,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SMILEHOOK_EXPORTS"
+				PreprocessorDefinitions="HOOK_EXPORTS; _USRDLL"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -136,9 +139,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/smile-hook.dll"
+				AdditionalDependencies="shlwapi.lib d3dx9.lib"
+				OutputFile="$(SolutionDir)/Release/smile-hook.dll"
 				LinkIncremental="1"
-				GenerateDebugInformation="true"
+				GenerateManifest="false"
+				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -180,7 +185,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\main.c"
+				RelativePath=".\hookapi.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\main.cpp"
 				>
 			</File>
 		</Filter>
@@ -189,6 +198,22 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\hookapi.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HookDirect3D9.h"
+				>
+			</File>
+			<File
+				RelativePath=".\HookDirect3DDevice9.h"
+				>
+			</File>
+			<File
+				RelativePath=".\main.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
