--- a/smile-injector/smile-injector.vcproj
+++ b/smile-injector/smile-injector.vcproj
@@ -4,6 +4,7 @@
 	Version="8.00"
 	Name="smile-injector"
 	ProjectGUID="{F38461CB-7F74-42D1-9EE9-5757D58E2A84}"
+	RootNamespace="smile-injector"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -16,11 +17,11 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="Debug"
+			OutputDirectory="../Debug"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="2"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -60,11 +61,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/smile-injector.exe"
+				AdditionalDependencies="$(SolutionDir)/smile-hook/$(ConfigurationName)/smile-hook.lib"
+				OutputFile="$(SolutionDir)/Debug/smile-injector.exe"
 				LinkIncremental="2"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/smile-injector.pdb"
-				SubSystem="2"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -135,10 +138,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)/smile-injector.exe"
+				AdditionalDependencies="$(SolutionDir)/smile-hook/$(ConfigurationName)/smile-hook.lib"
+				OutputFile="$(SolutionDir)/Release/smile-injector.exe"
 				LinkIncremental="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
+				GenerateManifest="false"
+				GenerateDebugInformation="false"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -178,7 +183,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\main.c"
+				RelativePath=".\main.cpp"
 				>
 			</File>
 		</Filter>
